Basic Schema::is_object() implementation and tests
Like the message says, it's a basic implementation of a helper function to let
you easily check if the Schema object is an Object; saves the caller from
writing the match code.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -28,7 +28,14 @@ mod schema_model {
 
         pub fn is_array(&self) -> bool {
             match *self {
-                Schema::Array(..)   => true,
+                Schema::Array(_)   => true,
+                _ => false,
+            }
+        }
+
+        pub fn is_object(&self) -> bool {
+            match *self {
+                Schema::Object(_) => true,
                 _ => false,
             }
         }
