--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -39,6 +39,13 @@ mod schema_model {
                 _ => false,
             }
         }
+
+        pub fn is_null(&self) -> bool {
+            match *self {
+                Schema::Null => true,
+                _ => false,
+            }
+        }
     }
 
     //use serde::json::Value;
