Implemented Schema.as_object for Schema::Array
Provided a simple, iterative implementation for converting Schmea::Array to
Schema::Object.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -51,6 +51,18 @@ mod schema_model {
                         .insert("type".to_string(), s.clone())
                         .unwrap();
                     Some(Schema::Object(value))
+                },
+                Schema::Array(ref v) => {
+                    let val_array = v.iter()
+                        .map(|e|
+                            if let Some(Schema::Object(v)) = e.as_object() {
+                                v
+                            } else {
+                                Value::String("null".to_string()) // really shouldn't get here...
+                            }
+                        )
+                        .collect();
+                    Some(Schema::Object(Value::Array(val_array)))
                 }
                 _ => None
             }
