Implement Schema::to_string()
Implemented in terms of String::from(Schema).

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -106,6 +106,10 @@ mod schema_model {
                 _ => false
             }
         }
+
+        pub fn to_string(&self) -> String {
+            String::from(self)
+        }
     }
 
     impl<'a> From<&'a Schema> for String {
