Change implementation of From<Schema> to use json::ser::to_string()
Thinking about it for more than 30 seconds, it makes a lot more sense to use
the serde::json::ser::to_string() function rather than to_string_pretty(); wwe
don't need all the extra whitespace.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -16,7 +16,7 @@ mod schema_model {
     use regex::Regex;
     use serde::json::Value;
     use serde::json::builder::ObjectBuilder;
-    use serde::json::ser::to_string_pretty;
+    use serde::json::ser::to_string;
 
     pub type PrimitiveType = String;
 
@@ -115,7 +115,7 @@ mod schema_model {
     impl<'a> From<&'a Schema> for String {
         fn from(s: &'a Schema) -> String {
             if let Some(Schema::Object(ref v)) = s.as_object() {
-                let r = to_string_pretty(&v);
+                let r = to_string(&v);
                 if r.is_ok() {
                     r.unwrap()
                 } else {
