Start implementation of Schema::fullname() for records
The rules are pretty consistent for all the complex types, but using record as
the base type provides a convenient concrete starting point.

First pass, only the "name" attribute is considered, which is obviously not
particularly useful.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -110,6 +110,24 @@ mod schema_model {
         pub fn to_string(&self) -> String {
             String::from(self)
         }
+
+        pub fn fullname(&self) -> String {
+            match *self {
+                Schema::Object(ref value) => {
+                    self.object_fullname(value)
+                }
+                _ => String::from("")
+            }
+        }
+
+        fn object_fullname(&self, value: &Value) -> String {
+            // Start simple, and build up the rules as the test cases require.
+            if let Some(&Value::String(ref name_value)) = value.find("name") {
+                name_value.clone()
+            } else {
+                String::from("")
+            }
+        }
     }
 
     impl<'a> From<&'a Schema> for String {
