Improve Schema::fullname() impl and add Schema::valid_fullname()
Improved the implementation of Schema:::fullname() to meet the specification
requirements for records, enums, and fixed deinfitions at the top level. It
doesn't take into account field names and scoping rules yet.

Also added a Schema::valid_fullname() method to determine if the fullname of
the record, etc. element is actually valid according to the Avro specification.

Note that I'm not convinced that this is the best way to implement this, and I
might go back to returning a Result<String, Error> from fullname() rather than
a bare String. That would eliminate the need for valid_fullname() and make it
unambiguous that the Schema has problems.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -107,10 +107,6 @@ mod schema_model {
             }
         }
 
-        pub fn to_string(&self) -> String {
-            String::from(self)
-        }
-
         pub fn fullname(&self) -> String {
             match *self {
                 Schema::Object(ref value) => {
@@ -121,12 +117,40 @@ mod schema_model {
         }
 
         fn object_fullname(&self, value: &Value) -> String {
-            // Start simple, and build up the rules as the test cases require.
             if let Some(&Value::String(ref name_value)) = value.find("name") {
-                name_value.clone()
+                if let Some(&Value::String(ref ns_value)) = value.find("namespace") {
+                    if name_value.contains(".") {
+                        name_value.clone()
+                    } else {
+                        format!("{}.{}", ns_value, name_value)
+                    }
+                } else {
+                    name_value.clone()
+                }
             } else {
                 String::from("")
             }
+        }
+
+        pub fn valid_fullname(&self) -> bool {
+            match *self {
+                Schema::Object(_) => {
+                    let fname = self.fullname();
+                    let segment_re = Regex::new(r#"^[A-Za-z_][A-Za-z0-9_]*$"#).unwrap();
+
+                    // yeah, I could have done this as for loop.
+                    fname.split('.').fold(true, |valid, segment|
+                        valid && segment_re.is_match(&segment)
+                    )
+                },
+                _ => false       // For all other types, punt
+            }
+        }
+    }
+
+    impl ToString for Schema {
+        fn to_string(&self) -> String {
+            String::from(self)
         }
     }
 
