--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ license = "Apache-2.0"
 [dependencies]
 serde = { version = "*", optional = false }
 regex = { version = "0.1.39", optional = false }
+log = "*"
+
+[dev-dependencies]
+env_logger = "*"
+lazy_static = "*"
